--- a/hospital/scss/header.scss
+++ b/hospital/scss/header.scss
@@ -17,19 +17,26 @@
         height: 78px;
         background-color: #e8e8e8;
 
+        .inner{
+        width: 1240px;
+        height: 100%;
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+        }
+
         ul{ 
             height: 100%;
             border:1px solid black;
-            margin: 0px 150px;
             display:flex;
             justify-content: center;
             align-items: center;
+            white-space: nowrap;
 
             li{
                 width: 100%;
                 height: 100%;
                 text-align: center;
-                word-break: keep-all;
                 display: flex;
                 align-items: center;
 
@@ -37,12 +44,18 @@
                 a{  
                     width: 100%;
                     height: 100%;
-                    font-size: 18px;
+                    // font-size: 18px;
                     color: #212121;
                     padding: 25px;
                 }
             }
         }
     }
-        
+       
+    
+    @media(max-width: 1240px){
+    .menuToggle{
+            display: block;
+        }
+    }
 }
