--- a/hospital/css/header.css
+++ b/hospital/css/header.css
@@ -1,21 +1,42 @@
 .header {
-  border: 1px solid red;
   z-index: 100;
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
 }
+.header .scroll {
+  position: fixed !important;
+  z-index: 9999;
+  background-color: black;
+  width: 100%;
+  top: 0;
+}
 .header .header-top {
   transition: 3s;
   width: 100%;
-  height: 110px;
-  background-color: yellow;
+  height: 130px;
+  background-color: rgb(255, 255, 255);
+  position: relative;
+}
+.header .header-top .inner {
+  width: 1240px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header .header-top .inner .menuToggle img {
+  width: 100%;
+  max-width: 38px;
 }
 .header .header-bottom {
   width: 100%;
-  height: 78px;
+  height: 80px;
   background-color: #e8e8e8;
+  position: relative;
 }
 .header .header-bottom .inner {
   width: 1240px;
