--- a/hospital/scss/content.scss
+++ b/hospital/scss/content.scss
@@ -1,7 +1,44 @@
 .content{
-    div{
+    width: 100%;
+    height: 100vh;
+    #main1{
+        width: 100%;
+        // height: 100%;
+        border-bottom: 1px solid black;
+        position: relative;
+
+        .fade{
+            // width: 100%;
+            // height: 100%;
+            border: 1px solid black;
+            .slick-arrow{
+                display: none !important;
+            }
+            .slick-slide{
+                height: 750px;
+            }
+            #slick-slide00{
+                background-image: url(../images/mv2.png);
+            }
+            .slick-dots{
+                // position: absolute;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                position: absolute;
+                bottom: 3%;
+                left: 50%;
+                // display: block;
+                padding: 0;
+                margin: 0;
+                list-style: none;
+                text-align: center;
+            }
+        }
+    }
+
+    .content-box{
         width: 100%;
         height: 100vh;
-        border-bottom: 1px solid black;
     }
 }
