--- a/hospital/scss/content.scss
+++ b/hospital/scss/content.scss
@@ -3,7 +3,7 @@
     height: 100vh;
     #main1{
         width: 100%;
-        // height: 100%;
+        height: 100%;
         border-bottom: 1px solid black;
         position: relative;
 
