--- a/hospital/css/content.css
+++ b/hospital/css/content.css
@@ -1,24 +1,43 @@
 .content {
   width: 100%;
-  height: 100vh;
 }
 .content #main1 {
   width: 100%;
-  height: 100%;
-  border-bottom: 1px solid black;
+  height: calc(100vh - 210px);
   position: relative;
+  background-color: aliceblue;
 }
 .content #main1 .fade {
-  border: 1px solid black;
+  height: 100%;
+}
+.content #main1 .fade .inner_wrap {
+  width: 100%;
 }
 .content #main1 .fade .slick-arrow {
   display: none !important;
 }
 .content #main1 .fade .slick-slide {
-  height: 750px;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+.content #main1 .fade .slick-list {
+  height: 100%;
+}
+.content #main1 .fade .slick-track {
+  height: 100%;
 }
 .content #main1 .fade #slick-slide00 {
+  background-image: url(../images/mv1.png);
+}
+.content #main1 .fade #slick-slide01 {
   background-image: url(../images/mv2.png);
+}
+.content #main1 .fade .slick-dots li.slick-active {
+  background-color: #2897cc;
 }
 .content #main1 .fade .slick-dots {
   display: flex;
@@ -31,8 +50,122 @@
   margin: 0;
   list-style: none;
   text-align: center;
+  transform: translateX(-50%);
+}
+.content #main1 .fade .slick-dots li {
+  position: relative;
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin: 3px;
+  padding: 0;
+  cursor: pointer;
+  box-sizing: border-box;
+  background: #fff;
+  opacity: 0.7;
+  border-radius: 100%;
+}
+.content #main1 .fade .slick-dots li button {
+  display: none;
+}
+.content #main1 .inner {
+  height: 100%;
+  min-height: 750px;
+  width: 1240px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+.content #main1 .inner .txt {
+  position: absolute;
+  z-index: 99;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 60px 0;
+  width: 60%;
+  border-radius: 15px;
+}
+.content #main1 .inner .txt .btn a {
+  /* background-color: #cdb380; */
+  font-weight: 500;
+  font-size: 1.25em;
+  line-height: 2.5em;
+  /* padding: 0 2em; */
+  display: inline-block;
+  margin-top: 1.5em;
+}
+.content #main1 .inner .txt .fc04 {
+  color: #3fb0e6 !important;
+}
+.content #main1 .inner .txt h4 {
+  text-transform: uppercase;
+  font-size: 1.125em;
+  letter-spacing: 0;
+  line-height: 1em;
+}
+.content #main1 .inner .txt h3 {
+  color: #fff;
+  font-size: 2.625em;
+  line-height: 1.4em;
+  margin: 0.725em 0;
+  word-spacing: -0.1em;
+  letter-spacing: -0.05em;
+}
+.content #main1 .inner .txt h3 strong {
+  font-size: 1.335em;
+}
+.content #main1 .inner .txt p {
+  color: #fff;
+  font-weight: 300;
+  font-size: 1.25em;
+  line-height: 1.4em;
+}
+.content #main1 .inner .txt p span {
+  font-weight: 500;
 }
 .content .content-box {
   width: 100%;
   height: 100vh;
+  border: 1px solid red;
+}
+@media (max-width: 1240px) {
+  .content #main1 {
+    margin-top: 0px !important;
+  }
+  .content #main1 .fade .inner {
+    width: 100% !important;
+  }
+  .content #main1 .fade .inner .txt h3 {
+    font-size: 2em !important;
+  }
+  .content #main1 .fade .inner .txt h4 {
+    font-size: 1em !important;
+  }
+  .content #main1 .fade .inner .txt p {
+    font-size: 1.125em !important;
+  }
+}
+@media (max-width: 690px) {
+  .content #main1 {
+    min-height: 680px;
+  }
+  .content #main1 .inner {
+    width: 100%;
+    min-height: 680px;
+  }
+  .content #main1 .inner .txt {
+    bottom: 0;
+    top: auto;
+    left: 0;
+    transform: translate(0);
+    padding: 50px 0 70px;
+    width: 100%;
+    border-radius: 15px 15px 0 0;
+  }
+  .content #main1 .inner .txt img {
+    max-width: 160px;
+  }
 }/*# sourceMappingURL=content.css.map */
