--- a/hospital/scss/content.scss
+++ b/hospital/scss/content.scss
@@ -1,44 +1,210 @@
 .content{
     width: 100%;
-    height: 100vh;
+    // height: 100vh;
     #main1{
         width: 100%;
-        height: 100%;
-        border-bottom: 1px solid black;
+        height: calc(100vh - 210px);
         position: relative;
+        background-color: aliceblue;
 
         .fade{
             // width: 100%;
-            // height: 100%;
-            border: 1px solid black;
+            height: 100%;
+            // border: 1px solid black;
+
+            .inner_wrap{
+                width: 100%;
+            }
             .slick-arrow{
                 display: none !important;
             }
             .slick-slide{
-                height: 750px;
+                height: 100%;
+                background-size: cover;
+                background-position: center center;
+                position: relative;
+                overflow: hidden;
+                width: 100%;
+                // height: 750px;
+            }
+            .slick-list{
+                height: 100%;
+            }
+            .slick-track{
+                height: 100%;
             }
             #slick-slide00{
+                background-image: url(../images/mv1.png);
+            }
+            #slick-slide01{
                 background-image: url(../images/mv2.png);
             }
+            
+            .slick-dots li.slick-active {
+                background-color: #2897cc;
+            }
             .slick-dots{
-                // position: absolute;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 position: absolute;
                 bottom: 3%;
                 left: 50%;
-                // display: block;
                 padding: 0;
                 margin: 0;
                 list-style: none;
                 text-align: center;
+                transform: translateX(-50%);
+
+                li{
+                    position: relative;
+                    display: inline-block;
+                    width: 15px;
+                    height: 15px;
+                    margin: 3px;
+                    padding: 0;
+                    cursor: pointer;
+                    box-sizing: border-box;
+                    background: #fff;
+                    opacity: 0.7;
+                    border-radius: 100%;
+                    button{
+                        display: none;
+                    }
+                }
             }
         }
+
+        // slider txt box
+        .inner {
+            height: 100%;
+            min-height: 750px;
+            width: 1240px;
+            position: relative;
+            margin-left: auto;
+            margin-right: auto;
+            
+            .txt {
+                position: absolute;
+                z-index: 99;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                text-align: center;
+                background-color: rgba(0,0,0,0.6);
+                padding: 60px 0;
+                width: 60%;
+                border-radius: 15px;
+                .btn a {
+                    /* background-color: #cdb380; */
+                    font-weight: 500;
+                    font-size: 1.25em;
+                    line-height: 2.5em;
+                    /* padding: 0 2em; */
+                    display: inline-block;
+                    margin-top: 1.5em;
+                }
+                .fc04 {
+                    color: #3fb0e6 !important;
+                }
+
+                h4 {
+                    text-transform: uppercase;
+                    // font-weight: 500;
+                    font-size: 1.125em;
+                    letter-spacing: 0;
+                    line-height: 1em;
+                }
+
+                 h3 {
+                    color: #fff;
+                    font-size: 2.625em;
+                    line-height: 1.4em;
+                    margin: 0.725em 0;
+                    word-spacing: -0.1em;
+                    letter-spacing: -0.05em;
+                    strong {
+                        font-size: 1.335em;
+                    }
+                }
+
+                p {
+                    color: #fff;
+                    font-weight: 300;
+                    font-size: 1.25em;
+                    line-height: 1.4em;
+                    span {
+                        font-weight: 500;
+                    }
+                }
+
+
+            }
+        }
+
+
+
     }
 
     .content-box{
         width: 100%;
         height: 100vh;
+        border: 1px solid red;
+
     }
+
+
+
+
+    @media(max-width: 1240px){
+        #main1{
+            margin-top: 0px !important;
+            // height: 90%;
+        
+            .fade{
+                .inner {
+                    width: 100% !important;
+
+                    .txt {
+                        h3{
+                            font-size: 2em !important;
+                        }
+                        h4 {
+                            font-size: 1em !important;
+                        }
+                        p {
+                            font-size: 1.125em !important;
+                        }
+                    }
+
+                }
+
+            }
+        }
+    }
+
+
+    @media (max-width: 690px){
+        #main1  {
+            min-height: 680px;
+            .inner{
+                width: 100%;
+                min-height: 680px;
+            }
+        }
+        #main1 .inner .txt{
+            bottom: 0;
+            top: auto;
+            left: 0;
+            transform: translate(0);
+            padding: 50px 0 70px;
+            width: 100%;
+            border-radius: 15px 15px 0 0;
+            img {
+                max-width: 160px;
+            }
+        }
+    }
+
+
 }
