--- a/hospital/scss/header.scss
+++ b/hospital/scss/header.scss
@@ -2,7 +2,7 @@
     .scroll{
         position: fixed !important;
         z-index: 9999;
-        background-color: black;
+        background-color: #fff;
         width: 100%;
         top: 0;
     }
@@ -15,14 +15,19 @@
     width: 100%;
 
     .header-top{
-        transition: 3s;
         width: 100%;
         height: 130px;
-        background-color: rgb(255, 255, 255);
         position: relative;
+        border-bottom: 1px solid #eaeaea;
+        transition: 1s;
+        background-color: rgb(255, 255, 255);
         
+        #moGnb{
+            display: none;
+        }
         .inner{
-            width: 1240px;
+            // width: 1240px;
+            height: 100%;
             position: relative;
             margin-left: auto;
             margin-right: auto;       
@@ -31,18 +36,34 @@
             align-items: center;
             justify-content: center;
 
-            .menuToggle img{
-                width: 100%;
-                max-width: 38px;
+            .menuToggle{
+                // width: 24px;
+                img{
+                    width: 100%;
+                    max-width: 38px;
+                    display: none;
+                }
+            }
+            .logo{
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 420px;
+            }
+            .btn{
+                position: absolute;
+                right: 5%;
             }
         }
 
     }
+
     .header-bottom{
         width: 100%;
         height: 80px;
-        background-color: #e8e8e8;
+        // background-color: #e8e8e8;
         position: relative;
+        border-bottom: 1px solid #eee;
         // top: 110px;
         // left: 0px;
 
@@ -56,7 +77,7 @@
 
         ul{ 
             height: 100%;
-            border:1px solid black;
+            // border:1px solid black;
             display:flex;
             justify-content: center;
             align-items: center;
@@ -73,7 +94,8 @@
                 a{  
                     width: 100%;
                     height: 100%;
-                    // font-size: 18px;
+                    font-size: 18px;
+                    font-weight: 550;
                     color: #212121;
                     padding: 25px;
                 }
@@ -81,10 +103,63 @@
         }
     }
        
-    
+
+// ------------------------------------------------------------
+// ------------------------------------------------------------
+// ------------------------------------------------------------
+
     @media(max-width: 1240px){
-    .menuToggle{
-            display: block;
+        .header-top{
+            height: 90px;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 999;
+            background-color: #fff;
+            display: block !important;
+        }
+
+        .logo{
+            max-width: 300px;
+            width: 300px !important;
+        }
+
+        .menuToggle{
+            position: absolute;
+            left: 5%;
+            img{
+                display: block !important;
+            }
+        }
+
+        .header-bottom{
+            display: none;
+        }
+
+
+    }
+
+// ------------------------------------------------------------
+// ------------------------------------------------------------
+// ------------------------------------------------------------
+
+    @media (max-width: 480px){
+        .logo{
+            max-width: 240px;
+        }
+        .header-top{
+            height: 72px;
+            .menuToggle img {
+                max-width: 30px !important;
+            }
+            .btn li a img {
+                max-width: 36px;
+                width: 100%;
+            }
         }
     }
+
+
+
+
 }
