--- a/hospital/scss/content.scss
+++ b/hospital/scss/content.scss
@@ -78,7 +78,7 @@
         // slider txt box
         .inner {
             height: 100%;
-            min-height: 750px;
+            // min-height: 750px;
             width: 1240px;
             position: relative;
             margin-left: auto;
