--- a/hospital/css/main2.css
+++ b/hospital/css/main2.css
@@ -4,16 +4,16 @@
   padding: 20px 0 90px;
   width: 100%;
 }
-#main2 .inner {
+#main2 > .inner {
   width: 1240px;
   position: relative;
   margin-left: auto;
   margin-right: auto;
 }
-#main2 .inner .m_tit {
+#main2 > .inner .m_tit {
   text-align: center;
 }
-#main2 .inner .m_tit h3 {
+#main2 > .inner .m_tit h3 {
   font-size: 2.5em;
   line-height: 1.4em;
   margin: 0.5em 0;
@@ -21,18 +21,18 @@
   letter-spacing: -0.05em;
   font-weight: 300;
 }
-#main2 .inner .m_tit h3 span {
+#main2 > .inner .m_tit h3 span {
   font-weight: 600;
 }
-#main2 .inner .m_tit p {
+#main2 > .inner .m_tit p {
   font-weight: 300;
   font-size: 1.0625em;
   word-break: keep-all;
 }
-#main2 .inner .m_tit p span {
+#main2 > .inner .m_tit p span {
   font-weight: 500;
 }
-#main2 .inner .m_tit::before {
+#main2 > .inner .m_tit::before {
   content: "";
   display: block;
   width: 1px;
@@ -40,17 +40,57 @@
   background-color: #828c90;
   margin: 0 auto 20px;
 }
-#main2 .inner .inner {
+#main2 > .inner .inner {
   width: 100%;
+}
+#main2 > .inner .inner ul {
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
+  flex-wrap: wrap;
+  text-align: center;
+}
+#main2 > .inner .inner ul li {
+  margin: 0 1.875%;
+  width: 29%;
+  margin-bottom: 3em;
+}
+#main2 > .inner .inner ul li .tit {
+  font-size: 1.5em;
+  margin: 30px 0 20px;
+  line-height: 1em;
+  letter-spacing: -0.075em;
 }
 
 @media (max-width: 690px) {
   #main2 {
     padding: 20px 0 50px;
   }
+  #main2 ul {
+    margin-top: 50px;
+  }
+  #main2 ul li {
+    width: 46% !important;
+  }
+  #main2 ul li .tit {
+    margin: 15px 0 10px;
+  }
 }
 @media (max-width: 1240px) {
   #main2 {
     padding: 20px 0 80px;
+  }
+  #main2 .inner {
+    width: 100% !important;
+  }
+  #main2 .inner ul {
+    flex-wrap: wrap;
+    margin-top: 80px;
+  }
+  #main2 .inner ul li {
+    width: 33.3333%;
+    text-align: center;
+    margin: 0;
+    margin-bottom: 2em;
   }
 }/*# sourceMappingURL=main2.css.map */
