--- a/hospital/scss/content.scss
+++ b/hospital/scss/content.scss
@@ -148,7 +148,7 @@
 
     .content-box{
         width: 100%;
-        height: 100vh;
+        // height: 100vh;
         border: 1px solid red;
 
     }
