--- a/hospital/scss/content.scss
+++ b/hospital/scss/content.scss
@@ -146,12 +146,12 @@
 
     }
 
-    .content-box{
-        width: 100%;
-        // height: 100vh;
-        border: 1px solid red;
+    // .content-box{
+    //     width: 100%;
+    //     // height: 100vh;
+    //     // border: 1px solid red;
 
-    }
+    // }
 
 
 
