--- a/hospital/scss/main2.scss
+++ b/hospital/scss/main2.scss
@@ -82,7 +82,8 @@
 
 @media (max-width: 690px) {
   #main2 {
-    padding: 20px 0 50px;
+    padding: 20px 0 30px !important;
+    h3{font-size: 1.5em !important;}
       ul {
         margin-top: 50px;
         li {
